added tests + fixed swagger
